# Gilded-Rose-Kata-Python

./: README.md  pyproject.toml
src/: gilded_rose.py
tests/: example_test.py  golden_master_test.py
