[tool.poetry]
name = "gilded_rose"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[tool.poetry.scripts]
start = "src:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
